@@ -23,13 +23,17 @@ apport (0.42) UNRELEASED; urgency=low
     to the summary are terminated with a newline.
   * apport/ui.py: Fix error message invocation for reporting cloakroom upload
     failure.
+  * problem_report.py, write_mime(): Fix off-by-one comparison of the 'inline
+    text' treshold, so that apport's StacktraceTop field appears in bug
+    summaries. Also fix a corner case in CR line ending handling. Check both
+    things in the test suite.
 
   Minor improvements:
 
   * apport/ui.py: Get the cloakroom ticket number from the
     X-Launchpad-Blob-Token HTTP header instead of parsing the resulting page.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 22 Jan 2007 19:00:26 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 23 Jan 2007 11:12:19 +0100
 
 apport (0.41) feisty; urgency=low
 
